--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   execute:
     runs-on: ubuntu-latest
+    environment: Test
     steps:
       - uses: actions/checkout@v3
       - uses: foundry-rs/foundry-toolchain@v1
