--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -21,8 +21,17 @@ jobs:
     runs-on: ubuntu-latest
     environment: Test
     steps:
-      - uses: actions/checkout@v3
-      - uses: foundry-rs/foundry-toolchain@v1
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: "stable"
+
+      - name: Install Dependencies
+        run: 	forge install
       
       - name: Run Dynamic Script
         run: |
