--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -1,4 +1,4 @@
-name: Master Forge Runner
+name: Counter Script `increment()`
 
 on:
   # Déclencheur via AWS EventBridge (Webhook)
@@ -8,10 +8,9 @@ on:
   # Déclencheur manuel (Bouton GitHub) pour tester facilement
   workflow_dispatch:
     inputs:
-      script_name:
-        description: 'Nom du script (ex: Counter)'
+      number_value:
+        description: 'Valeur numérique à utiliser dans le script'
         required: true
-        default: 'Counter'
       extra_args:
         description: 'Arguments supplémentaires'
         required: false
@@ -36,13 +35,13 @@ jobs:
       - name: Run Dynamic Script
         run: |
           # Petite astuce pour gérer soit le déclencheur AWS, soit le manuel
-          SCRIPT_NAME="${{ github.event.client_payload.script_name || inputs.script_name }}"
-          EXTRA_ARGS="${{ github.event.client_payload.extra_args || inputs.extra_args }}"
           
-          echo "🚀 Lancement du script: $SCRIPT_NAME"
+          echo "🚀 Lancement du script: CounterInteraction"
           
-          forge script script/$SCRIPT_NAME.s.sol \
+          forge script script/CounterInteraction.s.sol \
             --rpc-url ${{ secrets.RPC_URL }} \
             --private-key ${{ secrets.PRIVATE_KEY }} \
             --broadcast \
-            $EXTRA_ARGS
+
+        env:
+            NUMBER_VALUE: ${{ github.event.inputs.number_value }}
