--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -1,19 +1,16 @@
 name: Counter Script `increment()`
 
 on:
-  # Déclencheur via AWS EventBridge (Webhook)
+  # Trigger via AWS EventBridge (Webhook)
   repository_dispatch:
     types: [run-foundry-script]
   
-  # Déclencheur manuel (Bouton GitHub) pour tester facilement
+  # Manual trigger (GitHub Button) for easy testing
   workflow_dispatch:
     inputs:
       number_value:
-        description: 'Valeur numérique à utiliser dans le script'
+        description: 'Numeric value to use in the script'
         required: true
-      extra_args:
-        description: 'Arguments supplémentaires'
-        required: false
 
 jobs:
   execute:
@@ -34,14 +31,13 @@ jobs:
       
       - name: Run Dynamic Script
         run: |
-          # Petite astuce pour gérer soit le déclencheur AWS, soit le manuel
-          
-          echo "🚀 Lancement du script: CounterInteraction"
+          echo "🚀 Launching script: CounterInteraction"
           
           forge script script/CounterInteraction.s.sol \
             --rpc-url ${{ secrets.RPC_URL }} \
             --private-key ${{ secrets.PRIVATE_KEY }} \
             --broadcast \
+            -vvvvv
 
         env:
             NUMBER_VALUE: ${{ github.event.inputs.number_value }}
