--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -48,7 +48,6 @@ jobs:
           forge script script/CounterInteraction.s.sol \
             --rpc-url ${{ secrets.RPC_URL }} \
             --aws \
-            --sender $SENDER_ADDR \
             --broadcast \
             -vvvvv
 
@@ -66,4 +65,4 @@ jobs:
             AWS_REGION: ${{ secrets.AWS_REGION }}
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_KMS_KEY_ID: ${{ secrets.KMS_KEY_ID }}
+            AWS_KMS_KEY_ID: ${{ secrets.AWS_KMS_KEY_ID }}
