Add repository_dispatch trigger for manual cron execution

--- a/.github/workflows/master-script.yml
+++ b/.github/workflows/master-script.yml
@@ -1,6 +1,8 @@
 name: Scheduled Counter Script
 
 on:
+  repository_dispatch:
+    types: [mon-trigger-cron]
   # 1. AUTOMATIC TRIGGER (CRON)
   #schedule:
     # Syntax: 'minute hour day month day-of-week'
